--- a/manuscript/.Ulysses-Group.plist
+++ b/manuscript/.Ulysses-Group.plist
@@ -21,10 +21,10 @@
 			<string>quote.md</string>
 		</array>
 		<array>
-			<string>clarifications.md</string>
+			<string>Preface.md</string>
 		</array>
 		<array>
-			<string>introduction.md</string>
+			<string>clarifications.md</string>
 		</array>
 		<array>
 			<string>paradigms.md</string>
