--- a/manuscript/.Ulysses-Group.plist
+++ b/manuscript/.Ulysses-Group.plist
@@ -27,10 +27,10 @@
 			<string>Preface.md</string>
 		</array>
 		<array>
-			<string>mainmatter.md</string>
+			<string>notes.md</string>
 		</array>
 		<array>
-			<string>clarifications.md</string>
+			<string>mainmatter.md</string>
 		</array>
 		<array>
 			<string>paradigms.md</string>
