--- a/manuscript/.Ulysses-Group.plist
+++ b/manuscript/.Ulysses-Group.plist
@@ -33,7 +33,7 @@
 			<string>mainmatter.md</string>
 		</array>
 		<array>
-			<string>paradigms.md</string>
+			<string>introduction.md</string>
 		</array>
 		<array>
 			<string>concepts.md</string>
